--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="resume.html">Sobre mi</a>
+                <a class="nav-link" href="resume.html">Curriculum</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Proyectos</a>
@@ -74,15 +74,15 @@
                   class="badge bg-gradient-primary-to-secondary text-white mb-4"
                 >
                   <div class="text-uppercase">
-                    Design &middot; Development &middot; Marketing
+                    Desarrollo &middot; Marketing &middot; Analytics
                   </div>
                 </div>
                 <div class="fs-3 fw-light text-muted">
-                  I can help your business to
+                  Podemos impulsar a tu negocio
                 </div>
                 <h1 class="display-3 fw-bolder mb-5">
                   <span class="text-gradient d-inline"
-                    >Get online and grow fast</span
+                    >Llevalo al siguiente nivel!</span
                   >
                 </h1>
                 <div
@@ -91,12 +91,12 @@
                   <a
                     class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
                     href="resume.html"
-                    >Resume</a
+                    >Curriculum</a
                   >
                   <a
                     class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
                     href="projects.html"
-                    >Projects</a
+                    >Proyectos</a
                   >
                 </div>
               </div>
@@ -279,25 +279,25 @@
             <div class="col-xxl-8">
               <div class="text-center my-5">
                 <h2 class="display-5 fw-bolder">
-                  <span class="text-gradient d-inline">About Me</span>
+                  <span class="text-gradient d-inline">Sobre Mi</span>
                 </h2>
-                <p class="lead fw-light mb-4">
-                  My name is Start Bootstrap and I help brands grow.
-                </p>
+                <p class="lead fw-light mb-4">Mi nombre es Luis Ramos!</p>
                 <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Fugit dolorum itaque qui unde quisquam consequatur autem.
-                  Eveniet quasi nobis aliquid cumque officiis sed rem iure ipsa!
-                  Praesentium ratione atque dolorem?
+                  Desarrollador Web y Móvil | Analytics | Especialista en UI/UX
+                  | Servicios Web <br></br> ¡Saludos! Soy un apasionado del
+                  desarrollo de software con más de siete años de experiencia en
+                  el sector de Tecnologías de la Información. Mi enfoque no solo
+                  radica en la creación de código eficiente, sino también en la
+                  creación de experiencias digitales cautivadoras.
                 </p>
                 <div class="d-flex justify-content-center fs-2 gap-4">
-                  <a class="text-gradient" href="#!"
+                  <a class="text-gradient" href="https://twitter.com/LuisEdRamos"
                     ><i class="bi bi-twitter"></i
                   ></a>
-                  <a class="text-gradient" href="#!"
+                  <a class="text-gradient" href="https://www.linkedin.com/in/luis-eduardo-ramos-413555142/"
                     ><i class="bi bi-linkedin"></i
                   ></a>
-                  <a class="text-gradient" href="#!"
+                  <a class="text-gradient" href="https://t.co/nyWAgAzgzl"
                     ><i class="bi bi-github"></i
                   ></a>
                 </div>
@@ -314,14 +314,11 @@
           class="row align-items-center justify-content-between flex-column flex-sm-row"
         >
           <div class="col-auto">
-            <div class="small m-0">Copyright &copy; Your Website 2023</div>
+            <div class="small m-0">Copyright &copy; luisramos.com  2023</div>
           </div>
           <div class="col-auto">
-            <a class="small" href="#!">Privacy</a>
             <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Terms</a>
-            <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Contact</a>
+            <a class="small" href="/contact.html">Contacto</a>
             <span class="mx-1">&middot;</span>
             <a
               class="small"
