--- a/resume.html
+++ b/resume.html
@@ -88,11 +88,40 @@
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-4 rounded-4">
                         <div class="text-primary fw-bolder mb-2">
-                          2019 - Present
+                          Sep 2020 - Actual
                         </div>
-                        <div class="small fw-bolder">Web Developer</div>
-                        <div class="small text-muted">Stark Industries</div>
-                        <div class="small text-muted">Los Angeles, CA</div>
+                        <div class="small fw-bolder">Fullstack Engineer</div>
+                        <div class="small text-muted">Improving</div>
+                        <div class="small text-muted">Gudalajara, MX</div>
+                      </div>
+                    </div>
+                    <div class="col-lg-8">
+                      <div>
+                        Development and maintenance of code. Fixing bugs and
+                        issues. Review other engineers' code and pull requests.
+                        Report the status of the account to our managers in
+                        Mexico. Help new engineers to join the account and set
+                        up their workspace. Help other Improving engineers in
+                        the account with any issue or blocker in their workflow.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Experience Card 2-->
+              <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-5">
+                  <div class="row align-items-center gx-5">
+                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                      <div class="bg-light p-4 rounded-4">
+                        <div class="text-primary fw-bolder mb-2">
+                          2019 - 2020
+                        </div>
+                        <div class="small fw-bolder">Fullstack Engineer</div>
+                        <div class="small text-muted">
+                          Culiacan Technological Institute
+                        </div>
+                        <div class="small text-muted">Culiacan, Mx.</div>
                       </div>
                     </div>
                     <div class="col-lg-8">
@@ -106,7 +135,6 @@
                   </div>
                 </div>
               </div>
-              <!-- Experience Card 2-->
               <div class="card shadow border-0 rounded-4 mb-5">
                 <div class="card-body p-5">
                   <div class="row align-items-center gx-5">
@@ -115,9 +143,9 @@
                         <div class="text-primary fw-bolder mb-2">
                           2017 - 2019
                         </div>
-                        <div class="small fw-bolder">SEM Specialist</div>
-                        <div class="small text-muted">Wayne Enterprises</div>
-                        <div class="small text-muted">Gotham City, NY</div>
+                        <div class="small fw-bolder">Fullstack Engineer</div>
+                        <div class="small text-muted">Adsum</div>
+                        <div class="small text-muted">Culiacan, Mx.</div>
                       </div>
                     </div>
                     <div class="col-lg-8">
@@ -134,7 +162,9 @@
             </section>
             <!-- Education Section-->
             <section>
-              <h2 class="text-secondary fw-bolder mb-4">Education</h2>
+              <h2 class="text-secondary fw-bolder mb-4" style="margin: auto">
+                Educacion
+              </h2>
               <!-- Education Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
                 <div class="card-body p-5">
@@ -142,45 +172,19 @@
                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                       <div class="bg-light p-4 rounded-4">
                         <div class="text-secondary fw-bolder mb-2">
-                          2015 - 2017
+                          2015 - 2020
                         </div>
                         <div class="mb-2">
-                          <div class="small fw-bolder">Barnett College</div>
-                          <div class="small text-muted">Fairfield, NY</div>
+                          <div class="small fw-bolder">
+                            Tecnologico Nacional de Mexico
+                          </div>
+                          <div class="small text-muted">Campus Culiacan</div>
                         </div>
                         <div class="fst-italic">
-                          <div class="small text-muted">Master's</div>
-                          <div class="small text-muted">Web Development</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-8">
-                      <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Delectus laudantium, voluptatem quis repellendus eaque
-                        sit animi illo ipsam amet officiis corporis sed aliquam
-                        non voluptate corrupti excepturi maxime porro fuga.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Education Card 2-->
-              <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                  <div class="row align-items-center gx-5">
-                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
-                        <div class="text-secondary fw-bolder mb-2">
-                          2011 - 2015
-                        </div>
-                        <div class="mb-2">
-                          <div class="small fw-bolder">ULA</div>
-                          <div class="small text-muted">Los Angeles, CA</div>
-                        </div>
-                        <div class="fst-italic">
-                          <div class="small text-muted">Undergraduate</div>
-                          <div class="small text-muted">Computer Science</div>
+                          <div class="small text-muted">Licenciatura</div>
+                          <div class="small text-muted">
+                            Ingenieria en Tecnologias de la Informacion
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -229,14 +233,14 @@
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          Statistical Analysis
+                          Analisis Estadistico
                         </div>
                       </div>
                       <div class="col">
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          Web Development
+                          Desarrollo Web
                         </div>
                       </div>
                     </div>
@@ -245,21 +249,21 @@
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          Network Security
+                          Desarrollo Movil
                         </div>
                       </div>
                       <div class="col mb-4 mb-md-0">
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          Adobe Software Suite
+                          UX/UI Design
                         </div>
                       </div>
                       <div class="col">
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          User Interface Design
+                          Bases de datos
                         </div>
                       </div>
                     </div>
