Prod ready version 1

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="resume.html">Curriculum</a>
+                <a class="nav-link" href="services.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Proyectos</a>
@@ -65,7 +65,7 @@
       </nav>
       <!-- Header-->
       <header class="py-5">
-        <div class="container px-5 pb-5">
+        <div class="container px-4 pb-5">
           <div class="row gx-5 align-items-center">
             <div class="col-xxl-5">
               <!-- Header text content-->
@@ -90,8 +90,8 @@
                 >
                   <a
                     class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
-                    href="resume.html"
-                    >Curriculum</a
+                    href="services.html"
+                    >Servicios</a
                   >
                   <a
                     class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
@@ -274,7 +274,7 @@
       </header>
       <!-- About Section-->
       <section class="bg-light py-5">
-        <div class="container px-5">
+        <div class="container px-4">
           <div class="row gx-5 justify-content-center">
             <div class="col-xxl-8">
               <div class="text-center my-5">
@@ -282,11 +282,14 @@
                   <span class="text-gradient d-inline">Sobre Mi</span>
                 </h2>
                 <p class="lead fw-light mb-4">Mi nombre es Luis Ramos!</p>
+                <span>Desarrollador Web y Móvil | Analytics | Especialista en UI/UX
+                  | Servicios Web
+                </span>
+                <br><br/>
                 <p class="text-muted">
-                  Desarrollador Web y Móvil | Analytics | Especialista en UI/UX
-                  | Servicios Web <br></br> ¡Saludos! Soy un apasionado del
+                  ¡Saludos! Soy un apasionado del
                   desarrollo de software con más de siete años de experiencia en
-                  el sector de Tecnologías de la Información. Mi enfoque no solo
+                  el sector de Tecnologías de la Información. <br></br>Mi enfoque no solo
                   radica en la creación de código eficiente, sino también en la
                   creación de experiencias digitales cautivadoras.
                 </p>
@@ -332,7 +335,5 @@
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
   </body>
 </html>
