--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Curriculum</title>
+    <title>Servicios</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Custom Google font-->
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="resume.html">Curriculum</a>
+                <a class="nav-link" href="services.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Proyectos</a>
@@ -64,142 +64,9 @@
         </div>
       </nav>
       <!-- Page Content-->
-      <div class="container px-5 my-5">
-        <div class="text-center mb-5">
-          <h1 class="display-5 fw-bolder mb-0">
-            <span class="text-gradient d-inline">Curriculum</span>
-          </h1>
-        </div>
+      <div class="container px-3 my-5">
         <div class="row gx-5 justify-content-center">
           <div class="col-lg-11 col-xl-9 col-xxl-8">
-            <!-- Experience Section-->
-            <section>
-              <div class="d-flex align-items-center mb-4">
-                <h2 class="text-primary fw-bolder mb-0" style="margin: auto">
-                  Experiencia
-                </h2>
-                <!-- Download resume button-->
-                <!-- Note: Set the link href target to a PDF file within your project-->
-              </div>
-              <!-- Experience Card 1-->
-              <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                  <div class="row align-items-center gx-5">
-                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">
-                          Sep 2020 - Actual
-                        </div>
-                        <div class="small fw-bolder">Fullstack Engineer</div>
-                        <div class="small text-muted">Improving</div>
-                        <div class="small text-muted">Gudalajara, MX</div>
-                      </div>
-                    </div>
-                    <div class="col-lg-8">
-                      <div>
-                        Development and maintenance of code. Fixing bugs and
-                        issues. Review other engineers' code and pull requests.
-                        Report the status of the account to our managers in
-                        Mexico. Help new engineers to join the account and set
-                        up their workspace. Help other Improving engineers in
-                        the account with any issue or blocker in their workflow.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- Experience Card 2-->
-              <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                  <div class="row align-items-center gx-5">
-                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">
-                          2019 - 2020
-                        </div>
-                        <div class="small fw-bolder">Fullstack Engineer</div>
-                        <div class="small text-muted">
-                          Culiacan Technological Institute
-                        </div>
-                        <div class="small text-muted">Culiacan, Mx.</div>
-                      </div>
-                    </div>
-                    <div class="col-lg-8">
-                      <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Delectus laudantium, voluptatem quis repellendus eaque
-                        sit animi illo ipsam amet officiis corporis sed aliquam
-                        non voluptate corrupti excepturi maxime porro fuga.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                  <div class="row align-items-center gx-5">
-                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
-                        <div class="text-primary fw-bolder mb-2">
-                          2017 - 2019
-                        </div>
-                        <div class="small fw-bolder">Fullstack Engineer</div>
-                        <div class="small text-muted">Adsum</div>
-                        <div class="small text-muted">Culiacan, Mx.</div>
-                      </div>
-                    </div>
-                    <div class="col-lg-8">
-                      <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Delectus laudantium, voluptatem quis repellendus eaque
-                        sit animi illo ipsam amet officiis corporis sed aliquam
-                        non voluptate corrupti excepturi maxime porro fuga.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <!-- Education Section-->
-            <section>
-              <h2 class="text-secondary fw-bolder mb-4" style="margin: auto">
-                Educacion
-              </h2>
-              <!-- Education Card 1-->
-              <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                  <div class="row align-items-center gx-5">
-                    <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                      <div class="bg-light p-4 rounded-4">
-                        <div class="text-secondary fw-bolder mb-2">
-                          2015 - 2020
-                        </div>
-                        <div class="mb-2">
-                          <div class="small fw-bolder">
-                            Tecnologico Nacional de Mexico
-                          </div>
-                          <div class="small text-muted">Campus Culiacan</div>
-                        </div>
-                        <div class="fst-italic">
-                          <div class="small text-muted">Licenciatura</div>
-                          <div class="small text-muted">
-                            Ingenieria en Tecnologias de la Informacion
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-8">
-                      <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Delectus laudantium, voluptatem quis repellendus eaque
-                        sit animi illo ipsam amet officiis corporis sed aliquam
-                        non voluptate corrupti excepturi maxime porro fuga.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
             <!-- Divider-->
             <div class="pb-5"></div>
             <!-- Skills Section-->
@@ -216,9 +83,7 @@
                         <i class="bi bi-tools"></i>
                       </div>
                       <h3 class="fw-bolder mb-0">
-                        <span class="text-gradient d-inline"
-                          >Professional Skills</span
-                        >
+                        <span class="text-gradient d-inline">Servicios</span>
                       </h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
@@ -344,18 +209,20 @@
             <div class="small m-0">Copyright &copy; luisramos.com 2023</div>
           </div>
           <div class="col-auto">
-            <a class="small" href="#!">Privacy</a>
             <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Terms</a>
+            <a class="small" href="/contact.html">Contacto</a>
             <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Contact</a>
+            <a
+              class="small"
+              href="https://www.flaticon.es/iconos-gratis/usuario"
+              title="Iconos creados por:"
+              >Iconos</a
+            >
           </div>
         </div>
       </div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
   </body>
 </html>
