--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content />
     <meta name="author" content />
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Contacto - Luis Ramos - Desarrollo de Software</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Custom Google font-->
@@ -32,7 +32,7 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
           <a class="navbar-brand" href="index.html"
-            ><span class="fw-bolder text-primary">Start Bootstrap</span></a
+            ><span class="fw-bolder text-primary">LUIS RAMOS</span></a
           >
           <button
             class="navbar-toggler"
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="resume.html">Curriculum</a>
+                <a class="nav-link" href="services.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Proyectos</a>
@@ -65,7 +65,7 @@
       </nav>
       <!-- Page content-->
       <section class="py-5">
-        <div class="container px-5">
+        <div class="container px-4">
           <!-- Contact form-->
           <div class="bg-light rounded-4 py-5 px-4 px-md-5">
             <div class="text-center mb-5">
@@ -74,8 +74,8 @@
               >
                 <i class="bi bi-envelope"></i>
               </div>
-              <h1 class="fw-bolder">Get in touch</h1>
-              <p class="lead fw-normal text-muted mb-0">Let's work together!</p>
+              <h1 class="fw-bolder">Enviame un mensaje</h1>
+              <p class="lead fw-normal text-muted mb-0">Trabajemos juntos!</p>
             </div>
             <div class="row gx-5 justify-content-center">
               <div class="col-lg-8 col-xl-6">
@@ -88,8 +88,8 @@
                       type="text"
                       placeholder="Enter your name..."
                     />
-                    <label for="name">Full name</label>
-                    <div class="invalid-feedback">A name is required.</div>
+                    <label for="name">Nombre</label>
+                    <div class="invalid-feedback">El nombre es requerido.</div>
                   </div>
                   <!-- Email address input-->
                   <div class="form-floating mb-3">
@@ -99,7 +99,7 @@
                       type="email"
                       placeholder="name@example.com"
                     />
-                    <label for="email">Email address</label>
+                    <label for="email">Correo electronico</label>
                     <div class="invalid-feedback">An email is required.</div>
                     <div class="invalid-feedback">Email is not valid.</div>
                   </div>
@@ -111,7 +111,7 @@
                       type="tel"
                       placeholder="(123) 456-7890"
                     />
-                    <label for="phone">Phone number</label>
+                    <label for="phone">Numero de telefono</label>
                     <div class="invalid-feedback">
                       A phone number is required.
                     </div>
@@ -125,7 +125,7 @@
                       placeholder="Enter your message here..."
                       style="height: 10rem"
                     ></textarea>
-                    <label for="message">Message</label>
+                    <label for="message">Mensaje</label>
                     <div class="invalid-feedback">A message is required.</div>
                   </div>
                   <!-- Submit success message-->
@@ -135,7 +135,6 @@
                   <div class="d-none" id="submitSuccessMessage">
                     <div class="text-center mb-3">
                       <div class="fw-bolder">Form submission successful!</div>
-                      To activate this form, sign up at
                     </div>
                   </div>
                   <!-- Submit error message-->
@@ -144,15 +143,15 @@
                   <!-- an error submitting the form-->
                   <div class="d-none" id="submitErrorMessage">
                     <div class="text-center text-danger mb-3">
-                      Error sending message!
+                      Complete los datos para enviar el mensaje!!
                     </div>
                   </div>
                   <!-- Submit Button-->
                   <div class="d-grid">
                     <button
-                      class="btn btn-primary btn-lg disabled"
+                      class="btn btn-primary btn-lg"
                       id="submitButton"
-                      type="submit"
+                      type="button"
                     >
                       Submit
                     </button>
@@ -166,7 +165,7 @@
     </main>
     <!-- Footer-->
     <footer class="bg-white py-4 mt-auto">
-      <div class="container px-5">
+      <div class="container px-4">
         <div
           class="row align-items-center justify-content-between flex-column flex-sm-row"
         >
@@ -174,11 +173,15 @@
             <div class="small m-0">Copyright &copy; luisramos.com 2023</div>
           </div>
           <div class="col-auto">
-            <a class="small" href="#!">Privacy</a>
             <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Terms</a>
+            <a class="small" href="/contact.html">Contacto</a>
             <span class="mx-1">&middot;</span>
-            <a class="small" href="#!">Contact</a>
+            <a
+              class="small"
+              href="https://www.flaticon.es/iconos-gratis/usuario"
+              title="Iconos creados por:"
+              >Iconos</a
+            >
           </div>
         </div>
       </div>
