--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Servicios de Software</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Custom Google font-->
@@ -30,9 +30,9 @@
     <main class="flex-shrink-0">
       <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-        <div class="container px-5">
+        <div class="container px-3">
           <a class="navbar-brand" href="index.html"
-            ><span class="fw-bolder text-primary">Start Bootstrap</span></a
+            ><span class="fw-bolder text-primary">LUIS RAMOS</span></a
           >
           <button
             class="navbar-toggler"
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="resume.html">Curriculum</a>
+                <a class="nav-link" href="services.html">Servicios</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="projects.html">Proyectos</a>
@@ -65,53 +65,77 @@
       </nav>
       <!-- Projects Section-->
       <section class="py-5">
-        <div class="container px-5 mb-5">
+        <div class="container px-2 mb-5">
           <div class="text-center mb-5">
             <h1 class="display-5 fw-bolder mb-0">
-              <span class="text-gradient d-inline">Projects</span>
+              <span class="text-gradient d-inline">Proyectos</span>
             </h1>
           </div>
           <div class="row gx-5 justify-content-center">
             <div class="col-lg-11 col-xl-9 col-xxl-8">
               <!-- Project Card 1-->
               <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                <div class="card-body p-0">
-                  <div class="d-flex align-items-center">
-                    <div class="p-5">
-                      <h2 class="fw-bolder">Project Name 1</h2>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eius at enim eum illum aperiam placeat esse? Mollitia
-                        omnis minima saepe recusandae libero, iste ad
-                        asperiores! Explicabo commodi quo itaque! Ipsam!
-                      </p>
+                <div class="card-body p-0" style="max-height: 560px">
+                  <div
+                    class="d-flex align-items-center"
+                    style="flex-wrap: wrap; justify-content: center"
+                  >
+                    <div class="p-4">
+                      <h2 class="fw-bolder">Worn Wear Patagonia</h2>
                     </div>
-                    <img
-                      class="img-fluid"
-                      src="https://dummyimage.com/300x400/343a40/6c757d"
-                      alt="..."
-                    />
+                    <a href="https://wornwear.patagonia.com/">
+                      <img
+                        class="img-fluid"
+                        src="./assets/ww-banner.png"
+                        alt="..."
+                        width="100%"
+                      />
+                    </a>
                   </div>
                 </div>
               </div>
               <!-- Project Card 2-->
               <div class="card overflow-hidden shadow rounded-4 border-0">
-                <div class="card-body p-0">
-                  <div class="d-flex align-items-center">
-                    <div class="p-5">
-                      <h2 class="fw-bolder">Project Name 2</h2>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Eius at enim eum illum aperiam placeat esse? Mollitia
-                        omnis minima saepe recusandae libero, iste ad
-                        asperiores! Explicabo commodi quo itaque! Ipsam!
-                      </p>
+                <div class="card-body p-0" style="max-height: 560px">
+                  <div
+                    class="d-flex align-items-center"
+                    style="flex-wrap: wrap; justify-content: center"
+                  >
+                    <div class="p-4">
+                      <h2 class="fw-bolder">Carhartt Reworked</h2>
                     </div>
-                    <img
-                      class="img-fluid"
-                      src="https://dummyimage.com/300x400/343a40/6c757d"
-                      alt="..."
-                    />
+                    <a href="https://reworked.carhartt.com/">
+                      <img
+                        class="img-fluid"
+                        src="./assets/chrt-banner.png"
+                        alt="..."
+                        width="100%"
+                      />
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <!-- Project Card 3-->
+              <div
+                class="card overflow-hidden shadow rounded-4 border-0"
+                style="margin-top: 3rem !important"
+              >
+                <div class="card-body p-0" style="max-height: 560px">
+                  <div
+                    class="d-flex align-items-center"
+                    style="flex-wrap: wrap; justify-content: center"
+                  >
+                    <div class="p-4">
+                      <h2 class="fw-bolder">LEVIS Secondhand</h2>
+                    </div>
+                    <a href="https://www.secondhand.levi.com/">
+                      <img
+                        class="img-fluid"
+                        src="/assets/lsc-banner.png"
+                        alt="..."
+                        width="100%"
+                      />
+                    </a>
                   </div>
                 </div>
               </div>
@@ -124,12 +148,12 @@
         <div class="container px-5 my-5">
           <div class="text-center">
             <h2 class="display-4 fw-bolder mb-4">
-              Let's build something together
+              Contruyamos algo increible!
             </h2>
             <a
               class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder"
               href="contact.html"
-              >Contact me</a
+              >Contacto</a
             >
           </div>
         </div>
@@ -160,7 +184,5 @@
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
   </body>
 </html>
