--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
       <!-- Navigation-->
       <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
-          <a class="navbar-brand" href="index.html"
-            ><span class="fw-bolder text-primary">LUIS RAMOS</span></a
-          >
+          <a class="navbar-brand" href="index.html">
+            <span class="fw-bolder text-primary">LUIS RAMOS</span>
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -153,7 +153,7 @@
                       id="submitButton"
                       type="button"
                     >
-                      Submit
+                      Enviar
                     </button>
                   </div>
                 </form>
