--- a/services.html
+++ b/services.html
@@ -173,14 +173,14 @@
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          Python
+                          Kotlin
                         </div>
                       </div>
                       <div class="col mb-4 mb-md-0">
                         <div
                           class="d-flex align-items-center bg-light rounded-4 p-3 h-100"
                         >
-                          Ruby
+                          Java
                         </div>
                       </div>
                       <div class="col">
