--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
                     <a href="https://www.secondhand.levi.com/">
                       <img
                         class="img-fluid"
-                        src="/assets/lsc-banner.png"
+                        src="./assets/lsc-banner.png"
                         alt="..."
                         width="100%"
                       />
@@ -147,8 +147,8 @@
       <section class="py-5 bg-gradient-primary-to-secondary text-white">
         <div class="container px-5 my-5">
           <div class="text-center">
-            <h2 class="display-4 fw-bolder mb-4">
-              Contruyamos algo increible!
+            <h2 class="display-4 fw-bolder mb-4 text-gradient">
+              Construyamos algo increible!
             </h2>
             <a
               class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder"
