--- a/services.html
+++ b/services.html
@@ -142,7 +142,7 @@
                         <i class="bi bi-code-slash"></i>
                       </div>
                       <h3 class="fw-bolder mb-0">
-                        <span class="text-gradient d-inline">Languages</span>
+                        <span class="text-gradient d-inline">Lenguajes</span>
                       </h3>
                     </div>
                     <div class="row row-cols-1 row-cols-md-3 mb-4">
