--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                   </div>
                 </div>
                 <div class="fs-3 fw-light text-muted">
-                  Podemos impulsar a tu negocio
+                  Descubre cómo puedo ayudarte a alcanzar tus metas y potenciar tu crecimiento.
                 </div>
                 <h1 class="display-3 fw-bolder mb-5">
                   <span class="text-gradient d-inline"
-                    >Llevalo al siguiente nivel!</span
+                    >Potenciamos tu negocio hacia el éxito</span
                   >
                 </h1>
                 <div
